fix proxy tests compilation